<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#042940"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/text_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="64dp"
        android:text="@string/lets_begin"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:hint="@string/validation_name"
        android:textColor="@color/white"
        android:textColorHint="@color/teal_700" />

    <Button
        android:id="@+id/btn_save_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#13678A"
        android:text="@string/btn_save"
        android:textAllCaps="true" />

</RelativeLayout>