<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".ui.onbording.FirstOnbordingActivity">

    <LinearLayout
        android:id="@+id/linear_lens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_lens"/>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_lens"
            app:tint="@color/background" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_lens"
            app:tint="@color/background" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_onb_1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_onbording_1" />

    <TextView
        android:id="@+id/text_title_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_onb_1"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin"
        android:textColor="@color/white"
        android:text="@string/text_onb_title_home_1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_onb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title_first"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:text="@string/text_onb_sub_home_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linear_lens"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/cabin"
        android:text="@string/btn_next"
        android:textAllCaps="true" />


</RelativeLayout>